--- a/web/views/dashboard.ejs
+++ b/web/views/dashboard.ejs
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Mochi Bar Dashboard</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<link rel="icon" type="image/png" href="file:///Users/archertrenwith/Downloads/image-removebg-preview%20(10).png">
+<link rel="icon" type="image/png" href="https://ibb.co/PZj1fD7b">
 <style>
   body { font-family: 'Roboto', sans-serif; margin:0; background:#f7f9fc; color:#000; }
   header {
