--- a/web/views/player.ejs
+++ b/web/views/player.ejs
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Mochi Bar Database - <%= player.username %></title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<link rel="icon" type="image/png" href="https://ibb.co/PZj1fD7b">
+<link rel="icon" type="image/png" href="https://i.ibb.co/d0Mkzmd3/image-removebg-preview-10.png">
 <style>
   body {
     font-family: 'Roboto', sans-serif;
