--- a/web/views/dashboard.ejs
+++ b/web/views/dashboard.ejs
@@ -192,10 +192,17 @@
 </div>
 <div id="shiftModal" class="modal">
   <div class="modal-content">
-    <div class="modal-header"><span class="modal-title" id="modalShiftTitle"></span><span class="close" onclick="closeShiftModal()">&times;</span></div>
+    <div class="modal-header">
+      <span class="modal-title" id="modalShiftTitle"></span>
+      <span class="close" onclick="closeShiftModal()">&times;</span>
+    </div>
     <div class="modal-body">
       <div class="shift-roles-section"><h4>Shift Roles</h4><div id="modalRoles"></div></div>
-      <div class="attendees-section"><h4>Attendees <span class="attendee-count" id="modalAttendeeCount">0</span></h4><div class="attendees-container" id="modalAttendees"></div><div class="add-attendee-box" id="modalAddAttendee">+ Add attendee</div></div>
+      <div class="attendees-section">
+        <h4>Attendees <span class="attendee-count" id="modalAttendeeCount">0</span></h4>
+        <div class="attendees-container" id="modalAttendees"></div>
+        <div class="add-attendee-box" id="modalAddAttendee">+ Add attendee</div>
+      </div>
     </div>
   </div>
 </div>
